# DataForge

./: CMakeLists.txt  prompts.md  readme.md  ud-class-plan.md  udem-class-plan.md
src/: dataforge.c  utils.c  utils.h
tests/: test_dataforge.c  test_utils.c
